Addition of CSS

--- a/contactdetails.html
+++ b/contactdetails.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Details</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-  <h1>My Contact Details</h1>
+  <center><h1>My Contact Details</h1></center>
   <p>Please contact me regarding any enquiry</p>
   <ul>
     <li>Email - yeeeewwwww@gmail.com</li>
