--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Drew's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing=15>
     <tr>
       <td><img src="image.png" alt="drew profile picture" height="175" width="250"></td>
-      <td>
-        <h1>Drew Stanley</h1>
+      <td><h1>Drew Stanley</h1>
         <p><em>Operations Agent - <strong><a href="https://www.zurich.com.au/">Zurich</a></strong></em></p>
         <!--italics is <em> tag, bold is <strong> tag-->
         <p>24 years old, learning to program</p>
       </td>
     </tr>
   </table>
-  <hr size=2 noshade>
-  <h3>Education</h3>
+  <hr>
+<h3>Education</h3>
   <ul>
     <li>Mackillop Senior College</a>
       <ul>
@@ -29,8 +29,8 @@
     </li>
     <li>St Pauls</li>
   </ul>
-  <!--Ul is used to start unordered lists(bullet) and <li> is used for list items-->
-  <hr size=2 noshade>
+<!--Ul is used to start unordered lists(bullet) and <li> is used for list items-->
+  <hr>
   <h3>Work Experience</h3>
   <table>
     <thead>
@@ -53,7 +53,7 @@
       </tr>
     </tbody>
   </table>
-  <hr size=2 noshade>
+  <hr>
   <h3>Skills and Abilities</h3>
   <table>
     <tr>
@@ -85,8 +85,8 @@
   </table>
 
 
-  <hr size=2 noshade>
-  <a href="hobbies.html"><strong>My Hobbies</strong></a>
+  <hr>
+  <a href="hobbies.html">My Hobbies</a>
   <br />
   <a href="contactdetails.html">Contact Me</a>
 </body>
